@@ -27,6 +27,7 @@ from Products.PluginIndexes.interfaces import ILimitedResultIndex
 
 import BTrees.Length
 from BTrees.IIBTree import intersection, IISet
+from BTrees.IIBTree import weightedIntersection
 from BTrees.OIBTree import OIBTree
 from BTrees.IOBTree import IOBTree
 from Lazy import LazyMap, LazyCat, LazyValues
@@ -540,7 +541,9 @@ class Catalog(Persistent, Acquisition.Implicit, ExtensionClass.Base):
                 # provide detailed info about the pure intersection time
                 intersect_id = i + '#intersection'
                 cr.start_split(intersect_id)
-                rs = intersection(rs, r)
+                # weightedIntersection preserves the values from any mappings
+                # we get, as some indexes don't return simple sets
+                _, rs = weightedIntersection(rs, r)
                 cr.stop_split(intersect_id)
 
                 # consider the time it takes to intersect the index result with
